css/message.css
/**
* @file
* Stylesheet for inmail.
*/

/* General rules */

.inmail-message {
  margin: 10px;
}

/* Full view */

.inmail-message--full .inmail-message__header .inmail-message__element {
  display: flex;
}
.inmail-message--full .inmail-message__element label {
  padding: 0;
  font-weight: bold;
  width: 100px;
}
.inmail-message__full .inmail-message__element, .inmail-message__address {
  background-color: #dddddd;
  margin: 0px 6px 3px 0px;
  padding: 0px 3px 0px 3px;
  color: #0074BD;
}
.inmail-message--full .inmail-message__header .inmail-message__header__all {
  display: block;
  font-size: 0.9em;
}
.inmail-message--full .inmail-message__header .inmail-message__header__all label {
  display: none;
}
.inmail-message--full .inmail-message__header .inmail-message__header__all pre {
  width: 100%;
  overflow-x: scroll;
  white-space: pre;
}
.inmail-message--full .inmail-message__header .inmail-message__header__all.show-less {
  display: none;
}
.inmail-message__more_link {
  float: right;
}
.inmail-message--full .inmail-message__more_link.collapsed:after {
  content: url(/core/misc/menu-collapsed-rtl.png);
  padding-left: 10px;
}
.inmail-message--full .inmail-message__more_link.expanded:after {
  content: url(/core/misc/menu-expanded.png);
  padding-left: 10px;
}
.inmail-message--full .inmail-message__header,
.inmail-message--full .inmail-message__body,
.inmail-message--full .inmail-message__footer {
  margin-top: 20px;
  margin-bottom: 20px;
}
.inmail-message__body .ui-tabs-nav.ui-widget-header {
  padding: .2em .2em 0;
}
.inmail-message__body .ui-tabs-nav li {
  float: right;
}
.inmail-message__body .ui-tabs-nav .ui-state-default {
  background-color: #edede8;
  border-color: #bfbfbf;
}
.inmail-message__body .ui-tabs-nav .ui-state-active {
  background-color: #fff;
}

/* Teaser view */

.inmail-message--teaser .inmail-message__header,
.inmail-message--teaser .inmail-message__body {
  display: -webkit-flex;
  display: flex;
}
.inmail-message--teaser label {
  display: none;
}
.inmail-message--teaser .inmail-message__element {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.inmail-message--teaser .inmail-message__header__to:before {
  content: '>';
  margin: 0 1em 0 1em;
}
.inmail-message--teaser .inmail-message__header__cc {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  flex-basis: auto;
  color: #777;
}
.inmail-message--teaser .inmail-message__header__cc:before {
  content: '|';
  margin: 0 1em 0 1em;
}
.inmail-message--teaser .inmail-message__header__received-date,
.inmail-message--teaser .inmail-message__header__subject,
.inmail-message--teaser .inmail-message__header__all {
  display: none;
}
.inmail-message--teaser .inmail-message__body__subject {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  flex-basis: auto;
}
.inmail-message--teaser .inmail-message__body__subject:after {
  content: '|';
  margin: 0 1em 0 1em;
}
.inmail-message--teaser .inmail-message__body__content {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  flex-basis: 70%;
  color: #777;
  font-size: 88%;
}

